--- a/Deutsch/Sprachkrise (07.10.2013 - 24.11.2013)/07.10.2013 - Analyse: Hofmannsthal 'Die beiden'.md
+++ b/Deutsch/Sprachkrise (07.10.2013 - 24.11.2013)/07.10.2013 - Analyse: Hofmannsthal 'Die beiden'.md
@@ -13,14 +13,14 @@ Dies lässt das Gedicht sehr negativ und erdrückend für den Leser wirken.
 * Sonett
 * Metrum: 4-hebiger Jambus.
 * These - Antithese - Synthese
-* Überwiegend männliche Kandenzen
+* Überwiegend männliche Kadenzen
 * Paradoxon: Und dunkler Wein am Boden rollte
-* Parallelsimen
+* Parallelismen
 * Becher = Symbol (Motiv)
 * Leitmotiv: Hand
 * Gescheiterte Liebe:  "beide beben sie so sehr", "keine Hand die andere fand"
 * Binnenreime
 * Viele gleich klingende Laute (Klangteppich)
-* Alliteratonen, Assonanz
-* Onomatopoesie (Lautmalerei)
+* Alliterationen, Assonanz
+* Onomatopoese (Lautmalerei)
 
