--- a/Deutsch/Sprachkrise (07.10.2013 - 24.11.2013)/07.10.2013 - Ästhetizismus.md
+++ b/Deutsch/Sprachkrise (07.10.2013 - 24.11.2013)/07.10.2013 - Ästhetizismus.md
@@ -1,16 +1,19 @@
-# Was ist Ästhetizismus (Symbolismus)?
+Was ist Ästhetizismus (Symbolismus)?
+====================================
 
-* Sehr elitäres Verständnis von Kunst und Künstlertum
-* Kulturpessimismus (fin de siecle)
-* Weltabgewandheit
-* Negation der gesellschaftlichen Wirklichkeit
-* Strenge, kunstvolle Form ("vollkommenes Gedicht", bspw. Terzinen)
-* Symbolsprache
-* Größen des Ästhetizismus: Rainer Maria Rilke, Stefan George, Hugo von Hofmannsthal
+-   Sehr elitäres Verständnis von Kunst und Künstlertum
+-   Kulturpessimismus (fin de siecle)
+-   Weltabgewandheit
+-   Negation der gesellschaftlichen Wirklichkeit
+-   Strenge, kunstvolle Form ("vollkommenes Gedicht", bspw. Terzinen)
+-   Symbolsprache
+-   Größen des Ästhetizismus: Rainer Maria Rilke, Stefan George, Hugo
+    von Hofmannsthal
 
-# Terzinen
+Terzinen
+========
 
-* Terzette
-* umschlossener Reim wird umschließender Reim der Folgestrophen
-* fünfhebiger Jambus
-(Waise = Nicht reimender Vers)
+-   Terzette
+-   umschlossener Reim wird umschließender Reim der Folgestrophen
+-   fünf-hebiger Jambus (Waise = Nicht reimender Vers)
+
