--- a/Deutsch/Sprachkrise (07.10.2013 - 24.11.2013)/11.10.2013 - George 'Du schlank und rein...'.md
+++ b/Deutsch/Sprachkrise (07.10.2013 - 24.11.2013)/11.10.2013 - George 'Du schlank und rein...'.md
@@ -1,16 +1,22 @@
-# Du schlank und rein (George)
+Du schlank und rein (George)
+============================
 
-## Form = Inhalt
+Form = Inhalt
+-------------
 
-* Kreisstruktur
-* Anaphorische Apostrophen
-* Elliptische Verse
-* Vergleiche / Metaphern: Naturvergleiche (Licht, Schatten, Feuer, Wasser, Rauch, Luft)
-* Parallelistischer Aufbau
+-   Kreis Struktur
+-   Anaphorische Apostrophen
+-   Elliptische Verse
+-   Vergleiche / Metaphern: Natur Vergleiche (Licht, Schatten, Feuer,
+    Wasser, Rauch, Luft)
+-   Parallelistischer Aufbau
 
-## Deutung der Formanalyse
+Deutung der Form Analyse
+------------------------
 
-* Enge Bindung Ich / Du: Besessenheit
-* Idealisierung
-* Allgegenwertigkeit / Verabsolutierung
-* Biographischer Hintergrund: Liebe zu einem jungen Mann, der früh verstarb (Maximilian Kronberger)
+-   Enge Bindung Ich / Du: Besessenheit
+-   Idealisierung
+-   Allgegenwertigkeit / Verabsolutierung
+-   Biographischer Hintergrund: Liebe zu einem jungen Mann, der früh
+    verstarb (Maximilian Kronberger)
+
