--- a/Deutsch/Sprachkrise (07.10.2013 - 24.11.2013)/22.11.2013 - Nietzsche "Erkenntnis und Sprache".md
+++ b/Deutsch/Sprachkrise (07.10.2013 - 24.11.2013)/22.11.2013 - Nietzsche "Erkenntnis und Sprache".md
@@ -1,43 +1,59 @@
-# Nietzsche: Erkenntnis und Sprache
+Nietzsche: Erkenntnis und Sprache
+=================================
 
-## Zusammenfassung
+Zusammenfassung
+---------------
 
-* Wörter können nicht die Realität objektiv wiedergeben werden
-* Wort = Willkürliche Bezeichnung
-* Lügen können durch Wörter nicht erklärt werden (genauso wie Ironie nicht durch Worte abgedeckt werden kann)
-* Der Mensch teilt Dinge nach Geschlechtern ein, Die Natur kann aber keineswegs durch ein Geschlecht beschrieben werden
-* Gleichsetzen des Nicht-Gleichen
-* Lüge wird als Wahrheit deklariert
+-   Wörter können nicht die Realität objektiv wiedergeben werden
+-   Wort = Willkürliche Bezeichnung
+-   Lügen können durch Wörter nicht erklärt werden (genauso wie Ironie
+    nicht durch Worte abgedeckt werden kann)
+-   Der Mensch teilt Dinge nach Geschlechtern ein, Die Natur kann aber
+    keineswegs durch ein Geschlecht beschrieben werden
+-   Gleichsetzen des Nicht-Gleichen
+-   Lüge wird als Wahrheit deklariert
 
-* Jedes Wort ist eine willkürliche Bezeichnung, kein Ausdruck von Realität
-* Sprache erfasst nicht das Einzelobjekt, sondern eine nur durch die Sprache gleichgesetzte Klasse von Objekten
-* Sprache besteht aus Metaphern (subjektiven Setzungen), die in einer Gesellschaft nach festen Regeln verwendet werden und aus Gewohnheit als "wahr" erscheinen.
-* Sprachverwendung ist in konsequent "nach einer festen Konvention zu lügen".
+-   Jedes Wort ist eine willkürliche Bezeichnung, kein Ausdruck von
+    Realität
+-   Sprache erfasst nicht das Einzelobjekt, sondern eine nur durch die
+    Sprache gleichgesetzte Klasse von Objekten
+-   Sprache besteht aus Metaphern (subjektiven Setzungen), die in einer
+    Gesellschaft nach festen Regeln verwendet werden und aus Gewohnheit
+    als "wahr" erscheinen.
+-   Sprachverwendung ist in konsequent "nach einer festen Konvention zu
+    lügen".
 
-## Erklärung des Titels "Erkenntnis und Sprache"
+Erklärung des Titels "Erkenntnis und Sprache"
+---------------------------------------------
 
-Irgendwann bekommt man eine Erkenntnis über einen Gegenstand und benennt ihn dann nach diesen Erkentnissen. 
-Dies bedeutet, dass die Sprache nicht präzise Abbilden kann, da die Sprache immer an Erkenntnisse einzelner Menschen gebunden ist.
-Da auch nicht jeder Fachmann für alles sein kann werden Fremde Erkentnisse für Wahr befunden und werden so in die Sprache eingebunden.
-Die Überprüfung ob dieses auch wirklich Wahr ist, das ist in den Raum gestellt.
-Somit können sich auch Falsche, nicht der Realität entsprechende Begriffe einzug in die Sprache bekommen.
-Sprache kann aus diesem Grunde gar nicht erst objektiv sein.
+Irgendwann bekommt man eine Erkenntnis über einen Gegenstand und benennt
+ihn dann nach diesen Erkenntnissen. Dies bedeutet, dass die Sprache nicht
+präzise Abbilden kann, da die Sprache immer an Erkenntnisse einzelner
+Menschen gebunden ist. Da auch nicht jeder Fachmann für alles sein kann
+werden Fremde Erkenntnisse für Wahr befunden und werden so in die Sprache
+eingebunden. Die Überprüfung ob dieses auch wirklich Wahr ist, das ist
+in den Raum gestellt. Somit können sich auch Falsche, nicht der Realität
+entsprechende Begriffe Einzug in die Sprache bekommen. Sprache kann aus
+diesem Grunde gar nicht erst objektiv sein.
 
-## Vergleich: Chandos Brief und Nietzsches Text
+Vergleich: Chandos Brief und Nietzsches Text
+--------------------------------------------
 
 ### Chandos:
 
-* Egozentrisch
-* Ungenauheit
-* Tranzendenze Ebene
+-   Egozentrisch
+-   Ungenauheit
+-   Transzendente Ebene
 
 ### Nietsche:
 
-* An praktischen Beisielen belegt
-* "Tiefere" Ebene
-* Klar und präzise Formuliert
-* Sachtext
+-   An praktischen Beispielen belegt
+-   "Tiefere" Ebene
+-   Klar und präzise Formuliert
+-   Sachtext
 
-1. Analysiere beide Gedichte
-2. Vergleiche beide Gedichte vor dem Hintergrund  des "Chandos-Briefs" und zeige, wie sich in beiden das Bewusstsein einer Sprachkrise ausdrückt. 
+1.  Analysiere beide Gedichte
+2.  Vergleiche beide Gedichte vor dem Hintergrund des "Chandos-Briefs"
+    und zeige, wie sich in beiden das Bewusstsein einer Sprachkrise
+    ausdrückt.
 
