--- a/Deutsch/Sprachkrise (07.10.2013 - 24.11.2013)/24.11.2013 - Klausurvorbereitung Ästhetizismus.md
+++ b/Deutsch/Sprachkrise (07.10.2013 - 24.11.2013)/24.11.2013 - Klausurvorbereitung Ästhetizismus.md
@@ -1,66 +1,111 @@
-# Gedicht:
+Gedicht:
+========
 
-Ich fürchte mich so vor der Menschen Wort. 
-Sie sprechen alles so deutlich aus: 
-Und dieses heißt Hund und jenes heißt Haus, 
-und hier ist Beginn und das Ende ist dort. 
+Ich fürchte mich so vor der Menschen Wort. Sie sprechen alles so
+deutlich aus: Und dieses heißt Hund und jenes heißt Haus, und hier ist
+Beginn und das Ende ist dort.
 
-Mich bangt auch Ihr Sinn, ihr Spiel mit dem Spott, 
-sie wissen alles, was wird und war; 
-kein Berg ist ihnen mehr wunderbar; 
-ihr Garten und Gut grenzt grade an Gott. 
+Mich bangt auch Ihr Sinn, ihr Spiel mit dem Spott, sie wissen alles, was
+wird und war; kein Berg ist ihnen mehr wunderbar; ihr Garten und Gut
+grenzt grade an Gott.
 
-Ich will immer warnen und wehren: Bleibt fern. 
-Die Dinge singen hör ich so gern. 
-Ihr rührt sie an: sie sind starr und stumm. 
-Ihr bringt mir alle die Dinge um.
+Ich will immer warnen und wehren: Bleibt fern. Die Dinge singen hör ich
+so gern. Ihr rührt sie an: sie sind starr und stumm. Ihr bringt mir alle
+die Dinge um.
 
-Quelle: http://www.freiereferate.de/deutsch/interpretation-rainer-maria-rilke-ich-fuerchte-mich-so-vor-der-menschen-wort
+Quelle:
+http://www.freiereferate.de/deutsch/interpretation-rainer-maria-rilke-ich-fuerchte-mich-so-vor-der-menschen-wort
 
-# Analyse:
+Analyse:
+========
 
-Das vorliegende Gedicht stammt aus der Feder des Dichter Rainer Maria Rilke und wurde im Jahr 1898 veröffentlicht.
-Vom zeitlichen Kontext lässt sich das Gedicht der literarischen Epoche des "Ästhetizismus" zuordnen.
-Diese literarische Epoche ist vorallem durch ein elitäres Verständnis von Kunst und Dichtung geprägt. 
-Weiterhin negierten die Vertreter des Ästhetizismus die gesellschaftliche Wirklichkeit und versuchten sich in ihren Werken durch ihre meist sehr kunstvolle Form (bspw. Terzinen) von der ihre Ansicht nach niederen Kunst abzusetzen.
+Das vorliegende Gedicht stammt aus der Feder des Dichter Rainer Maria
+Rilke und wurde im Jahr 1898 veröffentlicht. Vom zeitlichen Kontext
+lässt sich das Gedicht der literarischen Epoche des "Ästhetizismus"
+zuordnen. Diese literarische Epoche ist vor allem durch ein elitäres
+Verständnis von Kunst und Dichtung geprägt. Weiterhin negierten die
+Vertreter des Ästhetizismus die gesellschaftliche Wirklichkeit und
+versuchten sich in ihren Werken durch ihre meist sehr kunstvolle Form
+(bspw. Terzinen) von der ihre Ansicht nach niederen Kunst abzusetzen.
 
-Innerhalb des Gedicht drückt ein lyrisches Ich seine Angst aus, dass es sich vor der Menschen Wort fürchtet.
-Im genauen wird von dem lyrischen Ich der sorglose Umgang der Menschen mit den Wörtern kritisiert.
-Das lyrische Ich sieht sich als einzelne Instanz an und sieht sich der gesamten Menschheit gegenüber.
-Dies ist erkennbar daran das, dass Gedicht vorallem durch die Personalpronomen "Ich" und "Ihr" dominiert wird. 
-Anhand des ersten Vers lässt sich erkennen, dass das lyrische ich sich mit dem "Ihr" auf die gesamte Menschheit bezieht, da das lyrische Ich seine Angst in der Menschen Wort lokalisiert (vgl. Z. 1: "Ich fürchte mich so vor der Menschen Wort").
-Die Forderung des lyrischen Ich ist Grundsätzlich das Erhalten der Ursprüngliche Sprache.
+Innerhalb des Gedicht drückt ein lyrisches Ich seine Angst aus, dass es
+sich vor der Menschen Wort fürchtet. Im genauen wird von dem lyrischen
+Ich der sorglose Umgang der Menschen mit den Wörtern kritisiert. Das
+lyrische Ich sieht sich als einzelne Instanz an und sieht sich der
+gesamten Menschheit gegenüber. Dies ist erkennbar daran das, dass
+Gedicht vor allem durch die Personalpronomen "Ich" und "Ihr" dominiert
+wird. Anhand des ersten Vers lässt sich erkennen, dass das lyrische ich
+sich mit dem "Ihr" auf die gesamte Menschheit bezieht, da das lyrische
+Ich seine Angst in der Menschen Wort lokalisiert (vgl. Z. 1: "Ich
+fürchte mich so vor der Menschen Wort"). Die Forderung des lyrischen Ich
+ist Grundsätzlich das Erhalten der Ursprüngliche Sprache.
 
-Das Gedicht gliedert sich in 3 Strophen, welche jeweils aus 4 Versen bestehen (drei Quartetten).
-Den ersten zwei Stophen des Gedichts liegt als Reimschema der Schweifreim zu Grunde.
-Die letzte Strophe besteht anders als die vorherigen Strophen aus zwei Aufeinander folgenden Paarreimen.
-Das Gedicht wird vorallem durch eine männliche Kandenz geprägt.
-Das Versmaß des Gedichts lässt sich allerdings nicht bestimmen, da dieses nicht einheitlicht ist.
-Durch die vier Hebungen innerhalb jedes Verses wird der Lesefluss dennoch nicht gestört und das Gedicht macht dennoch einen regelmäßigen Eindruck.
+Das Gedicht gliedert sich in 3 Strophen, welche jeweils aus 4 Versen
+bestehen (drei Quartetten). Den ersten zwei Strophen des Gedichts liegt
+als Reim Schema der Schweifreim zu Grunde. Die letzte Strophe besteht
+anders als die vorherigen Strophen aus zwei Aufeinander folgenden
+Paarreimen. Das Gedicht wird vor allem durch eine männliche Kadenz
+geprägt. Das Versmaß des Gedichts lässt sich allerdings nicht bestimmen,
+da dieses nicht einheitlich ist. Durch die vier Hebungen innerhalb jedes
+Verses wird der Lesefluss dennoch nicht gestört und das Gedicht macht
+dennoch einen regelmäßigen Eindruck.
 
-In der ersten Strophe kritisiert das lyrische Ich, dass die Menschen, die Bedeutung von Begriffen einfach festgelegt haben.
-Durch diese einfache Kategorisierung verschwindet laut dem lyrischen Ich die Schönheit und das Zauberhafte sowie das Besondere der Welt.
-Innerhalb des ersten Verses wird die Angst des lyrischen Ichs vor den Worten der Menschen definiert. 
-Diese Angst sieht das lyrische Ich als sehr akut und dringend an, dies wird durch die Steigerung deutlich, durch welche das lyrische Ich zum Ausdruck bringt es würde sich "so" von den Worten der Menschen fürchten (Z. 1: "Ich fürchte mich so vor der Menschen Wort").
-Durch die Akkumulation in den letzten beiden Versen der ersten Strophe (Z. 3-4), wird versucht dieser Schluss empirisch zu belegen, es werden also Beispiel zur Verdeutlichung der These gesammelt.
-Durch diese wird verdeutlicht, dass der lockere Umgang mit der Sprache sehr tiefgreifend ist und die Sprache im ganzen betrifft.
-Dadurch, dass das lyrische ich in der 3. Zeile zunächst ein profan Wirkendes Beispiel (Z. 3: "dieses heißt Hund und jenes heißt Haus") nennt und darauf hin ein bedeutenderes Beispiel über den "Beginn" bzw. das "Ende" (vgl. Z. 4) nennt, kommt es zu einer sichtbaren Steigerung. 
-Die Profanität des Beispiels, welches in der 3. Strophe defniert wird lässt sich auch dadurch belegen, dass das Beispiel eine Alliteration ist (Z. 3: "heißt Hund" und "heißt Haus").
-Mittels dieses Stilmittels wird die Alltäglichkeit bzw. Häufigkeit des Auftretens dieser Situation bekräftigt und die Eintönigkeit des Beispiels betont.
+In der ersten Strophe kritisiert das lyrische Ich, dass die Menschen,
+die Bedeutung von Begriffen einfach festgelegt haben. Durch diese
+einfache Kategorisierung verschwindet laut dem lyrischen Ich die
+Schönheit und das Zauberhafte sowie das Besondere der Welt. Innerhalb
+des ersten Verses wird die Angst des lyrischen Ichs vor den Worten der
+Menschen definiert. Diese Angst sieht das lyrische Ich als sehr akut und
+dringend an, dies wird durch die Steigerung deutlich, durch welche das
+lyrische Ich zum Ausdruck bringt es würde sich "so" von den Worten der
+Menschen fürchten (Z. 1: "Ich fürchte mich so vor der Menschen Wort").
+Durch die Akkumulation in den letzten beiden Versen der ersten Strophe
+(Z. 3-4), wird versucht dieser Schluss empirisch zu belegen, es werden
+also Beispiel zur Verdeutlichung der These gesammelt. Durch diese wird
+verdeutlicht, dass der lockere Umgang mit der Sprache sehr tiefgreifend
+ist und die Sprache im ganzen betrifft. Dadurch, dass das lyrische ich
+in der 3. Zeile zunächst ein profan Wirkendes Beispiel (Z. 3: "dieses
+heißt Hund und jenes heißt Haus") nennt und darauf hin ein bedeutenderes
+Beispiel über den "Beginn" bzw. das "Ende" (vgl. Z. 4) nennt, kommt es
+zu einer sichtbaren Steigerung. Die Profanität des Beispiels, welches in
+der 3. Strophe definiert wird lässt sich auch dadurch belegen, dass das
+Beispiel eine Alliteration ist (Z. 3: "heißt Hund" und "heißt Haus").
+Mittels dieses Stilmittels wird die Alltäglichkeit bzw. Häufigkeit des
+Auftretens dieser Situation bekräftigt und die Eintönigkeit des
+Beispiels betont.
 
-Innerhalb der zweiten Strophe wird von dem lyrischen Ich ausgesagt, dass die Menschen Dinge einfach umreißen und ihre Definitionen als Wahrhaftig und unbedingt richtig ansehen. 
-Außerdem sagt das lyrische Ich, dass die Menschen sich für Gottesgleich ansehen. Also so tun als ob sie alles wüssten (Z. 1: "ihr Garten und Gut grenzt grade an Gott").
-Es wird aber ganz klar von dem lyrischen Ich zum Ausdruck gebracht, dass diese Annäherung an Gott nur scheinbar ist und die eigentliche Distanz von den Menschen lediglich verkannt wird.
-Diese Strophe kann meiner Empfindung nach fast schon ironisch verstanden werden, durch die Distanzierung von der Menschheit wird nämlich gesagt, 
-das lyrische Ich würde verstehen wo die Wahrheit liegt und die ganze Menschheit mit seiner geistige Erkenntnis belehren wollen.
-Von dem lyrischen Ich wird auch hier die Selbstüberschätzung der Menschen genannt und als  Grundlage für die Angst des Lyrischen Ichs definiert.
-Auch wird wieder die Entzauberung der existiernden Welt angeprangert. Es wird also kritisiert, das die einfache Umreissungen von Dingen, dazu führen, dass die Welt nichts besonderes mehr ist (Z. 7: "kein Ding ist ihnen mehr wunderbar").
+Innerhalb der zweiten Strophe wird von dem lyrischen Ich ausgesagt, dass
+die Menschen Dinge einfach umreißen und ihre Definitionen als Wahrhaftig
+und unbedingt richtig ansehen. Außerdem sagt das lyrische Ich, dass die
+Menschen sich für Gottesgleich ansehen. Also so tun als ob sie alles
+wüssten (Z. 1: "ihr Garten und Gut grenzt grade an Gott"). Es wird aber
+ganz klar von dem lyrischen Ich zum Ausdruck gebracht, dass diese
+Annäherung an Gott nur scheinbar ist und die eigentliche Distanz von den
+Menschen lediglich verkannt wird. Diese Strophe kann meiner Empfindung
+nach fast schon ironisch verstanden werden, durch die Distanzierung von
+der Menschheit wird nämlich gesagt, das lyrische Ich würde verstehen wo
+die Wahrheit liegt und die ganze Menschheit mit seiner geistige
+Erkenntnis belehren wollen. Von dem lyrischen Ich wird auch hier die
+Selbstüberschätzung der Menschen genannt und als Grundlage für die Angst
+des Lyrischen Ichs definiert. Auch wird wieder die Entzauberung der
+existierenden Welt angeprangert. Es wird also kritisiert, das die
+einfache Umreißungen von Dingen, dazu führen, dass die Welt nichts
+besonderes mehr ist (Z. 7: "kein Ding ist ihnen mehr wunderbar").
 
-In der dritten Strophe wird von dem lyrischen Ich gesagt, dass es keine Möglichkeit mehr sieht die Menscheit aufzuklären bzw. sieht dies als eine nicht Erfolgsversprechende Option an.
-Als Schluss daraus wird von dem lyrischen die Distanzierung von diesen als einzigen Ausweg angesehen.
-Die letzten beiden Verse der Strophe fallen dadurch auf, dass diese mit mit dem Personalpronomen "Ihr" anfangen. 
-In diesen Beiden letzten Strophen (Z. 11-12) wird zunächst der Tatzustand definiert d.h., dass das lyrische Ich, die von den Menschen "berührten" Worte als "star und stumm" charakterisiert (Z. 11: "Ihr rührt sie an: sie sind starr und stumm").
-In dem letzen Vers wird dann noch einmal die Aussage getroffen, die Menschen würden alle Dinge "umbringen". 
-In diesem Zusammenhang wird von dem lyrischen Ich ausgedrückt, dass durch das Verhalten der Menschheit die Sprache ihren Sinn verlieren würde. 
-Und desshalb die Dinge umgebracht werden würden, da man mit deren Defnitionen nicht den eigentlichen Kern der Dinge beschreiben kann.
-Die Dinge werden also durch einen sorglosen Umgang mit Wörtern um ihre Bedeutung gebracht.
+In der dritten Strophe wird von dem lyrischen Ich gesagt, dass es keine
+Möglichkeit mehr sieht die Menschheit aufzuklären bzw. sieht dies als
+eine nicht Erfolgsversprechende Option an. Als Schluss daraus wird von
+dem lyrischen die Distanzierung von diesen als einzigen Ausweg
+angesehen. Die letzten beiden Verse der Strophe fallen dadurch auf, dass
+diese mit mit dem Personalpronomen "Ihr" anfangen. In diesen Beiden
+letzten Strophen (Z. 11-12) wird zunächst der Tat Zustand definiert
+d.h., dass das lyrische Ich, die von den Menschen "berührten" Worte als
+"starr und stumm" charakterisiert (Z. 11: "Ihr rührt sie an: sie sind
+starr und stumm"). In dem letzen Vers wird dann noch einmal die Aussage
+getroffen, die Menschen würden alle Dinge "umbringen". In diesem
+Zusammenhang wird von dem lyrischen Ich ausgedrückt, dass durch das
+Verhalten der Menschheit die Sprache ihren Sinn verlieren würde. Und
+deshalb die Dinge umgebracht werden würden, da man mit deren
+Definitionen nicht den eigentlichen Kern der Dinge beschreiben kann. Die
+Dinge werden also durch einen sorglosen Umgang mit Wörtern um ihre
+Bedeutung gebracht.
