--- a/Deutsch/Sprachursprung (09.12.2013 - 17.01.2014)/09.12.2013 - Dadaismus.md
+++ b/Deutsch/Sprachursprung (09.12.2013 - 17.01.2014)/09.12.2013 - Dadaismus.md
@@ -1,18 +1,23 @@
-# Dadaismus
+Dadaismus
+=========
 
-* magische Qualitäten -> Litanei, Beschwörungsformeln
-* Zerstörung der konventionellen Sprache -> individuelle Kunstsprache
-* Natürliche Verwandschaft mit Dingen -> Lautmalerei, assoziativer "Sinn"
+-   magische Qualitäten → Litanei, Beschwörungsformeln
+-   Zerstörung der konventionellen Sprache → individuelle Kunstsprache
+-   Natürliche Verwandschaft mit Dingen → Lautmalerei, assoziativer
+    "Sinn"
 
-* Betonung des "Materials" der Dichtung: Wort und Klang
-* Abstraktion: Lösung von Inhalt und Gegenständlichen (wie Zeitgleich mit der Malerei)
-* Inszenierung: Happening-Charakter, Gesamtkunstwerk
-* Elemente des Spielerischen, Unernst Anarchisch (gegen hohe Kunst)
+-   Betonung des "Materials" der Dichtung: Wort und Klang
+-   Abstraktion: Lösung von Inhalt und Gegenständlichen (wie Zeitgleich
+    mit der Malerei)
+-   Inszenierung: Happening-Charakter, Gesamtkunstwerk
+-   Elemente des Spielerischen, Unernst Anarchisch (gegen hohe Kunst)
 
-# Eröffnungsmanisfest: Dada-Abend (Hugo Ball, 1916)
+Eröffnungsmanisfest: Dada-Abend (Hugo Ball, 1916)
+=================================================
 
-* Verzicht auf Sprachen = im Sinn von konventioneller Sprache
-* Ansprache auf Originalität, konventionelle Sprache ist eingeschränkt
-* Konventionelle Sprache ist ein korrumpiertes "schwätziges" Medium
-* Sprache benennt Dinge willkürlich
-* Zurück zu den "Urbausteinen" der Sprache: Worte und Klänge
+-   Verzicht auf Sprachen = im Sinn von konventioneller Sprache
+-   Ansprache auf Originalität, konventionelle Sprache ist eingeschränkt
+-   Konventionelle Sprache ist ein korrumpiertes "schwätziges" Medium
+-   Sprache benennt Dinge willkürlich
+-   Zurück zu den "Urbausteinen" der Sprache: Worte und Klänge
+
