--- a/Deutsch/Sprachursprung (09.12.2013 - 17.01.2014)/09.12.2013 - Die Aufklärung.md
+++ b/Deutsch/Sprachursprung (09.12.2013 - 17.01.2014)/09.12.2013 - Die Aufklärung.md
@@ -16,7 +16,7 @@ Epochen der Aufklärung
 
 ### Empirismus
 
--   Verstandsorientierung
+-   Verstands Orientierung
 -   Empirie hat Vorrang zur einem allein theoretisch Fundierten Wissen
     (Vernunfstwissen)
 -   Erziehung des Menschen
@@ -24,6 +24,6 @@ Epochen der Aufklärung
 ### Kritizismus
 
 -   Kants Theorien stehen im Mittelpunkt = intellektuelles Zentrum
--   Kritik am Tranzendenten, Verdrängung kirchlicher Autoritäten
+-   Kritik am Transzendenten, Verdrängung kirchlicher Autoritäten
 -   Zeitalter der Wissenschaft
 
