--- a/Deutsch/Sprachursprung (09.12.2013 - 17.01.2014)/09.12.2013 - Die Französische Aufklärung: Condillacs Sprachtheorie.md
+++ b/Deutsch/Sprachursprung (09.12.2013 - 17.01.2014)/09.12.2013 - Die Französische Aufklärung: Condillacs Sprachtheorie.md
@@ -13,7 +13,7 @@ Eigenarbeit:
     Bewusstsein
 -   Gefühle bzw. Bedürfnisse führen dazu, dass sich der Mensch diese
     lebenswichtigen Dinge sich merkt
--   Aufgrund der Bedürfniss nach Dingen zu streben und Menschen zu
+-   Aufgrund der Bedürfnisse nach Dingen zu streben und Menschen zu
     helfen hat sich eine Verständigung ganz automatisch etabliert
 -   Die Sprache entwickelte sich aus Lauten, welche sich nach den
     jeweiligen Erfahrungen der einzelnen richtet
@@ -22,7 +22,7 @@ Tafelabschrift:
 ---------------
 
 -   Schreie und Bewegungen, die Gefühle ausdrücken, um sich mitzuteilen
-    (vergleiche §2) -> Instinkt
+    (vergleiche §2) -\> Instinkt
 -   Schreie und Bewegungen dienen reflektiert zur Mitteilung von
     Gefühlen, Auslöser: Gewöhnung (vergleiche §3)
 -   Parallele Weiterentwicklung von Sprache und Verstandesgebrauch
@@ -35,7 +35,8 @@ Tafelabschrift:
 -   Pfui-Pfui-Theorie
 -   "Am Anfang war die Geste"-Theorie
 
-## Kritik an der Sprachursprungstheorie Condillacs
+Kritik an der Sprachursprungstheorie Condillacs
+-----------------------------------------------
 
 -   Jede hinweisende Definition kann missverständlich sein
 -   Unterscheidung der Dinge ist nicht objektiv vorgegeben, sondern
@@ -45,5 +46,5 @@ Tafelabschrift:
 
 ### Resultat:
 
-Condillacs Namensgebung als entscheidender Schritt der Sprachentsteung setzt,
-wenn es funktionieren soll, Sprache schon vorraus.
+Condillacs Namensgebung als entscheidender Schritt der Sprach Entstehung
+setzt, wenn es funktionieren soll, Sprache schon voraus.
