--- a/Deutsch/Sprachursprung (09.12.2013 - 17.01.2014)/13.12.2013 - Die Schwierigkeiten der Zirkel.md
+++ b/Deutsch/Sprachursprung (09.12.2013 - 17.01.2014)/13.12.2013 - Die Schwierigkeiten der Zirkel.md
@@ -4,10 +4,10 @@ Die Schwierigkeiten der Zirkel: Jean-Jaques Rousseau
 Eigenarbeit:
 ------------
 
--   Menschliches Bedürfniss nach Sprache
+-   Menschliches Bedürfnis nach Sprache
 -   "Wenn die Menschen die Worte nötig gehabt hatten, um denken zu
     können, so haben sie das Denken noch nötiger gehabt"
--   Schrei der Natur -> Gesten / Lautnachahmung
+-   Schrei der Natur → Gesten / Laut Nachahmung
 -   Gesten können kaum mehr anzeigen als durch beschreibende Objekte
     oder sichtbare Handlungen anzeigen
 -   Durch Laute wurden Gesten abgelöst
