--- a/Deutsch/Sprachursprung (09.12.2013 - 17.01.2014)/17.01.2014 - Enstehung der Sprache nach Bickerton.md
+++ b/Deutsch/Sprachursprung (09.12.2013 - 17.01.2014)/17.01.2014 - Enstehung der Sprache nach Bickerton.md
@@ -26,7 +26,7 @@ Zentrale Aussagen Bickertons (Tafelabschrift):
 2.  Sprunghafte Entwicklung der Sprache vor rund 100.000 Jahren, die
     mit der komplexeren Werkzeugentwicklung einherging: Planung braucht
     Grammatik um Komplexität und Konditionalität auszudrücken
-3.  Beim Menschen dominieren nich äußere Reize, sondern innere, daher
+3.  Beim Menschen dominieren nicht äußere Reize, sondern innere, daher
     kann der Mensch "innere Nachrichten" erzeugen und äußern. Er allein
     hat auch die dazu notwendige Anzahl von Neuronen, um die neuronale
     Stabilität herzustellen, die man für die Erzeugung eines Satzes
