--- a/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/13.09.2013 - Montagetechnik.md
+++ b/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/13.09.2013 - Montagetechnik.md
@@ -1,11 +1,20 @@
-# Montagetechnik in "Tauben im Gras"
+Montagetechnik in "Tauben im Gras"
+==================================
 
-## Verknüpfungstechniken
-* Scheinbare Fortführung eines Satzes
-* Sprachliche Wiederaufnahme (z.B. eines Wortes)
-* Wiederaufnahme einer Situation oder eines Motivs (z.B. Verkehrssituation an der Kreuzung)
+Verknüpfungstechniken
+---------------------
 
-## Wirkung der Verknüpfungstechniken auf den Leser
-* Orientierungshilfe für den Leser
-* Verbindung von Form und Sprache geht einher mit einer Trennung im Inhalt und unterstreicht sie: Figuren sind isoliert, leben nebeneinander und verfolgen gegensätzliche Ziele
-* Spiegelt Komplexität und Disparität der modernen Welt
+-   Scheinbare Fortführung eines Satzes
+-   Sprachliche Wiederaufnahme (bspw. von einem Wort)
+-   Wiederaufnahme einer Situation oder eines Motivs (z.B.
+    Verkehrssituation an der Kreuzung)
+
+Wirkung der Verknüpfungstechniken auf den Leser
+-----------------------------------------------
+
+-   Orientierungshilfe für den Leser
+-   Verbindung von Form und Sprache geht einher mit einer Trennung im
+    Inhalt und unterstreicht sie: Figuren sind isoliert, leben
+    nebeneinander und verfolgen gegensätzliche Ziele
+-   Spiegelt Komplexität und Disparität der modernen Welt
+
