--- a/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/13.09.2013 - Räume als Knotenpunkte.md
+++ b/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/13.09.2013 - Räume als Knotenpunkte.md
@@ -1,36 +1,43 @@
-# Räume als Knotenpunkte
+Räume als Knotenpunkte
+======================
 
-## Negerklub
+Amerikahaus
+-----------
 
-## Bräuhaus
+-   Schnarckenbach
 
-## Amerikahaus
-* Schnarckenbach
+Stadion
+-------
 
-## Stadion
-* Washington
-* Odysseus
-* Josef
-* Christopher
-* Ezra
-* Heinz (und Jungs)
+-   Washington
+-   Odysseus
+-   Josef
+-   Christopher
+-   Ezra
+-   Heinz (und Jungs)
 
-## Kreuzung
-* Emilia
-* Mr. Edwin
-* Behude
-* Washington
+Kreuzung
+--------
 
-## Hotel (Lobby)
-* Messalina
-* Kay (Lehrerinnen bzw. Kollegium)
-* Emilia
-* Mr. Edwin
-* Philipp
+-   Emilia
+-   Mr. Edwin
+-   Behude
+-   Washington
 
-## Symbolik der Raumgestalt (Fazit):
-* Keine echte Begegnungen zwischen den Figuren
-* Orte sind Sammelpunkte des Nebeneinanders
-* Spiegeln die Oberflächlichkeit
-* Zufälligkeit und Vergeblichkeit menschlicher Beziehungen
+Hotel (Lobby)
+-------------
+
+-   Messalina
+-   Kay (Lehrerinnen bzw. Kollegium)
+-   Emilia
+-   Mr. Edwin
+-   Philipp
+
+Symbolik der Raumgestalt (Fazit):
+---------------------------------
+
+-   Keine echte Begegnungen zwischen den Figuren
+-   Orte sind Sammelpunkte des Nebeneinanders
+-   Spiegeln die Oberflächlichkeit
+-   Zufälligkeit und Vergeblichkeit menschlicher Beziehungen
 
