--- a/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/13.09.2013 - Struktur des Romans.md
+++ b/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/13.09.2013 - Struktur des Romans.md
@@ -1,21 +1,29 @@
-# Strukur des Romans
+Struktur des Romans
+==================
 
-## Wie legt Koeppen die Gesamtstruktur des Romans an?
-* Rahmenstruktur (Prolog - Zeittypen - Epilog) 
-* Prolog/Epilog: Einblendung von Schlagzeilen als Zeitkolorit
-* Orte als Knotenpunkte (Nur Oberflächige Begegnungen der Personen)
-* Einheit der Zeit: Zeitraum eng begrenzt (6.00 - 24.00 also 18h)
-* Einheit des Ortes: Großstadt (München)
-* Mehrere Handlungstränge: Abschnitte (keine Kapitel)
-* Montagetechnik: Unverbundene Handlungstränge (keine Übergänge)
-* Figurenensemble (statt Hautpfigur) als "Zeittypen"
-* Figuren sind ein Querschnitt der Gesellschaft
+Wie legt Koeppen die Gesamtstruktur des Romans an?
+--------------------------------------------------
 
-## Welche Gliederungsprinzipien lassen sich erkennen?
-* Wechsel zwischen Zeittypen
-* Keine Gliederung in Akte
-* Abrupte Übergänge
+-   Rahmenstruktur (Prolog - Zeittypen - Epilog)
+-   Prolog/Epilog: Einblendung von Schlagzeilen als Zeitkolorit
+-   Orte als Knotenpunkte (Nur Oberflächige Begegnungen der Personen)
+-   Einheit der Zeit: Zeitraum eng begrenzt (6.00 - 24.00 also 18h)
+-   Einheit des Ortes: Großstadt (München)
+-   Mehrere Handlungsstränge: Abschnitte (keine Kapitel)
+-   Montagetechnik: Unverbundene Handlungsstränge (keine Übergänge)
+-   Figuren Ensemble (statt Hauptfigur) als "Zeittypen"
+-   Figuren sind ein Querschnitt der Gesellschaft
 
-## Welche Wirkung hat diese Anlage auf die Leser?
-* Desorientierung des Lesers, dennoch allmähliches Verständniss von Handlung und Struktur
+Welche Gliederungsprinzipien lassen sich erkennen?
+--------------------------------------------------
+
+-   Wechsel zwischen Zeittypen
+-   Keine Gliederung in Akte
+-   Abrupte Übergänge
+
+Welche Wirkung hat diese Anlage auf die Leser?
+----------------------------------------------
+
+-   Desorientierung des Lesers, dennoch allmähliches Verständnis von
+    Handlung und Struktur
 
