--- a/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/16.09.2013 - Abstract zu Hanna Arendt.md
+++ b/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/16.09.2013 - Abstract zu Hanna Arendt.md
@@ -1,14 +1,27 @@
-# Abstract zur Stellungnahme von Hanna Arendt (Hausaufgabe)
+Abstract zur Stellungnahme von Hanna Arendt (Hausaufgabe)
+=========================================================
 
-Am Anfang des Textes legt die Autorin kurz die Historie Europas nieder bis hin zur Situation des Nachkriegsdeutschlands.
-Die Problematik der Zwangs-Emigration von Deutschen-Miderheiten aus anderen ehemals Deutschen Ländern nach Deutschland und die Zerstörten Städte wird in dem Text an dieser stelle kurz angesprochen. 
+Am Anfang des Textes legt die Autorin kurz die Historie Europas nieder
+bis hin zur Situation des Nachkriegsdeutschlands. Die Problematik der
+Zwangs-Emigration von Deutschen-Minderheiten aus anderen ehemals
+Deutschen Ländern nach Deutschland und die Zerstörten Städte wird in dem
+Text an dieser stelle kurz angesprochen.
 
-Im Weiteren besteht der Text aus den Schlussfolgeungen, die die Autorin aus einigen Interviews gezogen hat. 
-Dabei fällt auf, dass vor allem die deutsche Bevölkerung die Zeit des dritten Reichs versucht bestmöglichst zu verdrängen. 
-Es wird auch teilweise keine Rücksicht auf die Verantwortung gegenüber Jüdisch Verfolgten Teilen gezeigt. 
-Man kann zwar damit argumentieren, dass dies an der noch zu erledigenden Verantwortung des Wiederaufbaus liegt.
-Dies ist aber insofern fadenscheinig, da auch in dieser schweren Situation die Verbrechen der Vergangenheit nicht ungeschehen gemacht werden können. Ein Respektvoller Umgang sollte gerade mit Verfolgten Bevölkerungsgruppen erwartet werden. 
+Im Weiteren besteht der Text aus den Schlussfolgerungen, die die Autorin
+aus einigen Interviews gezogen hat. Dabei fällt auf, dass vor allem die
+deutsche Bevölkerung die Zeit des dritten Reichs versucht bestmöglichst
+zu verdrängen. Es wird auch teilweise keine Rücksicht auf die
+Verantwortung gegenüber Jüdisch Verfolgten Teilen gezeigt. Man kann zwar
+damit argumentieren, dass dies an der noch zu erledigenden Verantwortung
+des Wiederaufbaus liegt. Dies ist aber insofern fadenscheinig, da auch
+in dieser schweren Situation die Verbrechen der Vergangenheit nicht
+ungeschehen gemacht werden können. Ein Respektvoller Umgang sollte
+gerade mit Verfolgten Bevölkerungsgruppen erwartet werden.
 
-Es fällt aber auch auf, dass die Autorin auch von einer etwas distanzierten Position ihre Werke verfasst, zudem wirkt es nicht so als dass Sie wirklich in Not leben würde.
-Aus diesem Grunde kann man im Groben auch verstehen, dass die Befragten auf diese Art des Interviews teilweise etwas unpassend reagierten. 
-Auch finde ich dass die Betrachtung und Bewerung des Intellekts von Menschen als arrogant definiert werden kann.
+Es fällt aber auch auf, dass die Autorin auch von einer etwas
+distanzierten Position ihre Werke verfasst, zudem wirkt es nicht so als
+dass Sie wirklich in Not leben würde. Aus diesem Grunde kann man im
+Groben auch verstehen, dass die Befragten auf diese Art des Interviews
+teilweise etwas unpassend reagierten. Auch finde ich dass die
+Betrachtung und Bewertung des Intellekts von Menschen als arrogant
+definiert werden kann.
