--- a/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/20.09.2013 - Die Unfähigkeit zu trauern.md
+++ b/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/20.09.2013 - Die Unfähigkeit zu trauern.md
@@ -1,14 +1,23 @@
-# "Die Unfähigkeit zu trauern" (Alexander und Magarete Mitscherlich) 
+"Die Unfähigkeit zu trauern" (Alexander und Magarete Mitscherlich)
+==================================================================
 
-## Diagnose:
-* Mangelnde innere Auseinandersetzung der Deutschen mit der Nazi-Herrschaft
-* Kollektive Verleugnung und Verdrängung von Schuld und Verantwortung
+Diagnose:
+---------
 
-## Abwehrmechanismen:
-* Gefühlsstarre, Unfähigkeit zur Trauerarbeit, mangelnde Empathie mit Opfern
-* Identitätswechsel, Identifikation mit Siegern
-* Derealisierung
-* Manische Fixierung auf den Wiederaufbau und die materielle Situation
-* Trennung in genehme Erinnerungen (-> Glorifizierung der Vergangenheit), und unangenehme Erinnerungen, die unterdrückt werden.
-* Aufbau neuer stereotypen Vorurteile
+-   Mangelnde innere Auseinandersetzung der Deutschen mit der
+    Nazi-Herrschaft
+-   Kollektive Verleugnung und Verdrängung von Schuld und Verantwortung
+
+Abwehrmechanismen:
+------------------
+
+-   Gefühlsstarre, Unfähigkeit zur Trauerarbeit, mangelnde Empathie mit
+    Opfern
+-   Identitätswechsel, Identifikation mit Siegern
+-   Derealisierung
+-   Manische Fixierung auf den Wiederaufbau und die materielle Situation
+-   Trennung in genehme Erinnerungen (→ Glorifizierung der
+    Vergangenheit), und unangenehme Erinnerungen, die unterdrückt
+    werden.
+-   Aufbau neuer stereotypen Vorurteile
 
