--- a/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/20.09.2013 - Gruppenarbeit.md
+++ b/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/20.09.2013 - Gruppenarbeit.md
@@ -1,70 +1,100 @@
-# Vergangenheitsbewältigung - Textauszüge für die Analyse
+Vergangenheitsbewältigung - Textauszüge für die Analyse
+=======================================================
 
-
-
-## S. 68, Z. 12-24
-
-### Kontext:
-* Odysseus und Josef sind in der Glocke
-* Odysseus spielt und verliert
-
-### Analyse:
-* Leute sind abgelenkt von Geschehnissen/Vergangenheit → Blaskapelle spielt Marsch
-* Denken an Einmärsche und Fanfaren → "genehme Erinnerung"
-* Vergessen "unangenehme Erinnerung" (bspw. Bunker, Graben, Sirenen, etc.) → Glorifizierung → Glorifizierung ("um Sieg betrogen werden")
-* Trauern nicht
-
-## S. 75, Z. 1-19
+S. 68, Z. 12-24
+---------------
 
 ### Kontext:
-* Heinz beobachtet den Parkplatz, der mit den Autos der Amerikanischen Besatzung vollgeparkt ist
+
+-   Odysseus und Josef sind in der Glocke
+-   Odysseus spielt und verliert
 
 ### Analyse:
-* Die Deutschen bewundern den "rollenden Aufwand", werten jedoch die Luxuswagen der Herrenfahrer (Amerikaner) als Überheblichkeit
-* Sind noch von den eingeprägten Spielregeln beeinflusst
 
-## S. 82, Z. 24 - S. 83, Z. 11
+-   Leute sind abgelenkt von Geschehnissen/Vergangenheit → Blaskapelle
+    spielt Marsch
+-   Denken an Einmärsche und Fanfaren → "genehme Erinnerung"
+-   Vergessen "unangenehme Erinnerung" (bspw. Bunker, Graben, Sirenen,
+    etc.) → Glorifizierung → Glorifizierung ("um Sieg betrogen werden")
+-   Trauern nicht
+
+S. 75, Z. 1-19
+--------------
 
 ### Kontext:
-* Soldaten sitzen im Bräuhaus
+
+-   Heinz beobachtet den Parkplatz, der mit den Autos der Amerikanischen
+    Besatzung vollgeparkt ist
 
 ### Analyse:
-* Die Soldaten jagen Wünschen und Illusionen nach
-* Selbstbetrug
-* Singen zusammen Kriegslieder
-* Reden über Krieg → feiern sich (Rommelsoldaten) in Kreta (→ Glorifizierung)
-* "töten Augen" von Soldat
-* Spricht von Säuberung, bekam Auszeichnung → Stolz
-* Anderer Soldat: Russland, harter Krieg
 
-## S. 129, Z. 24 - S. 131, Z. 8
+-   Die Deutschen bewundern den "rollenden Aufwand", werten jedoch die
+    Luxuswagen der Herrenfahrer (Amerikaner) als Überheblichkeit
+-   Sind noch von den eingeprägten Spielregeln beeinflusst
+
+S. 82, Z. 24 - S. 83, Z. 11
+---------------------------
 
 ### Kontext:
-* Richard trifft Tochter von Fr. Behrend:
-* Tochter hat Vorurteile gegenüber den Amerikanern
+
+-   Soldaten sitzen im Bräuhaus
 
 ### Analyse:
-* In Hierarchiedenken gefangen
-* Stände nicht überwindbar
-* Träumt vom sozialen Aufstieg (durch Prinz oder Chef)
 
-## S. 133, Z. 23 - S. 134, Z.16
+-   Die Soldaten jagen Wünschen und Illusionen nach
+-   Selbstbetrug
+-   Singen zusammen Kriegslieder
+-   Reden über Krieg → feiern sich (Rommelsoldaten) in Kreta (→
+    Glorifizierung)
+-   "töten Augen" von Soldat
+-   Spricht von Säuberung, bekam Auszeichnung → Stolz
+-   Anderer Soldat: Russland, harter Krieg
+
+S. 129, Z. 24 - S. 131, Z. 8
+----------------------------
 
 ### Kontext:
-* Richard ist in einem Laden und unterhält sich mit der Verkäuferin über Frau Behrend
-* Richard fühlt sich von der Verkäuferin bedrängt
+
+-   Richard trifft Tochter von Fr. Behrend:
+-   Tochter hat Vorurteile gegenüber den Amerikanern
 
 ### Analyse:
-* "Alles hatten sie uns genommen [...] Neger haben sie uns geschickt" (S. 133, Z. 23ff) → Rassistisches Denken
-* Verkäuferin: Frau Behrend musste sich mit Negern einlassen um zu überleben
-* Verkäufering: Amerikaner sind Sittenlos → Vorbehalte gegenüber den Amerikanischen Besetzern
 
-## S.197, Z. 14-29
+-   In Hierarchie Denken gefangen
+-   Stände nicht überwindbar
+-   Träumt vom sozialen Aufstieg (durch Prinz oder Chef)
+
+S. 133, Z. 23 - S. 134, Z.16
+----------------------------
 
 ### Kontext:
-* Richard auf der Hauptstraße/Warenhaus
+
+-   Richard ist in einem Laden und unterhält sich mit der Verkäuferin
+    über Frau Behrend
+-   Richard fühlt sich von der Verkäuferin bedrängt
 
 ### Analyse:
-* Vater des Fräulein: "Bei Hitler war's anders! Da war Zug drin" (S. 197, Z.22ff) → Glorifizierung der Vergangenheit
-* Mutter nickt, denkt aber an verbrannt Aussteuer - von Nazis verbrannt, sind jetzt arm. → Untedrückung (S. 197 Z. 28 "Wiedersprechen")
-* Vater verdrängt Nazi-Taten, Fräulein will Neues
+
+-   "Alles hatten sie uns genommen [...] Neger haben sie uns geschickt"
+    (S. 133, Z. 23ff) → Rassistisches Denken
+-   Verkäuferin: Frau Behrend musste sich mit Negern einlassen um zu
+    überleben
+-   Verkäuferin: Amerikaner sind Sittenlos → Vorbehalte gegenüber den
+    Amerikanischen Besetzern
+
+S.197, Z. 14-29
+---------------
+
+### Kontext:
+
+-   Richard auf der Hauptstraße/Warenhaus
+
+### Analyse:
+
+-   Vater des Fräulein: "Bei Hitler war's anders! Da war Zug drin" (S.
+    197, Z.22ff) → Glorifizierung der Vergangenheit
+-   Mutter nickt, denkt aber an verbrannt Aussteuer - von Nazis
+    verbrannt, sind jetzt arm. → Untedrückung (S. 197 Z. 28
+    "Wiedersprechen")
+-   Vater verdrängt Nazi-Taten, Fräulein will Neues
+
