--- a/Deutsch/Sprachkrise (07.10.2013 - 24.11.2013)/07.10.2013 - Januskopf der Jahrtausendwende.md
+++ b/Deutsch/Sprachkrise (07.10.2013 - 24.11.2013)/07.10.2013 - Januskopf der Jahrtausendwende.md
@@ -1,19 +1,23 @@
-# Januskopf als Symbol für die Jahrhundertwende
+Januskopf als Symbol für die Jahrhundertwende
+=============================================
 
-## Zwei Blickrichtungen:
+Zwei Blickrichtungen:
+---------------------
 
-1. Zurück
-* Was müssen wir bewahren?
-* Was ist das echte / wertvolle / authentische?
-→ Literatur des Ästhetizismus
+1.  Zurück
+    -   Was müssen wir bewahren?
+    -   Was ist das echte / wertvolle / authentische? → Literatur des
+        Ästhetizismus
 
-2. Voraus:
-* Was muss sich ändern (Gesellschaft/Kunst)?
-* Was ist neu / entwickelt sich neu?
-→ Literatur des Naturalismus, Expressionismus, Dadaismus
+1.  Voraus:
+    -   Was muss sich ändern (Gesellschaft/Kunst)?
+    -   Was ist neu / entwickelt sich neu? → Literatur des Naturalismus,
+        Expressionismus, Dadaismus
 
-## Fazit:
+Fazit:
+------
 
-* Bewusstsein einer Übergangs- und Krisenzeit
-* Reaktion auf die als banal empfundene bürgerliche Kunst und Literatur
+-   Bewusstsein einer Übergangs- und Krisenzeit
+-   Reaktion auf die als banal empfundene bürgerliche Kunst und
+    Literatur
 
