--- a/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/22.09.2013 - Innere Monologe.md
+++ b/Deutsch/Tauben im Gras (13.09. - 24.09.2013)/22.09.2013 - Innere Monologe.md
@@ -1,50 +1,57 @@
-# Merkmale von inneren Monologen, der erlebten Rede und des Bewusstseineinstroms
+Merkmale von inneren Monologen, der erlebten Rede und des Bewusstseineinstroms
+==============================================================================
 
-## Darstellung der jeweiligen Merkmale (Hausaufgabe)
+Darstellung der jeweiligen Merkmale (Hausaufgabe)
+-------------------------------------------------
 
 ### Innerer Monolog
 
-* Hat sich Ende des 19. Jahrhunderts entwickelt
-* Wird vor allem in Prosatexten verwendet
-* unausgesprochenes Gespräch, welches nur in den Gedanken der Figur stattfindet
-* Empfindungen und Gefühle kommen direkt zum Ausdruck
-* Verwendung der Ich-Form des Präsens
+-   Hat sich Ende des 19. Jahrhunderts entwickelt
+-   Wird vor allem in Prosatexten verwendet
+-   unausgesprochenes Gespräch, welches nur in den Gedanken der Figur
+    stattfindet
+-   Empfindungen und Gefühle kommen direkt zum Ausdruck
+-   Verwendung der Ich-Form des Präsens
 
 ### Erlebte Rede
 
-* Die Bewusstseinsinhalte werden in der dritten Person Indikativ Präteritum (bspw.: "Er hatte Lampenfieber") ausgedrückt (ansonsten die selbe Merkmale wie der Innere Monolog)
+-   Die Bewusstseinsinhalte werden in der dritten Person Indikativ
+    Präteritum (bspw.: "Er hatte Lampenfieber") ausgedrückt (ansonsten
+    die selbe Merkmale wie der Innere Monolog)
 
 ### Bewusstseinseinstrom
 
-* Englisch: Stream of Consciousness
-* Gedanken und Gefühle sollen möglichst direkt wiedergegeben werden
-* Es werden meist sehr einfache Sätze verwendet oder es kommt gar zu einer Auflösung der Syntax
+-   Englisch: Stream of Consciousness
+-   Gedanken und Gefühle sollen möglichst direkt wiedergegeben werden
+-   Es werden meist sehr einfache Sätze verwendet oder es kommt gar zu
+    einer Auflösung der Syntax
 
-## Tafelabschrieb zur Innenweltdarstellung (→ Gedanken und Gefühle)
+Tafelabschrieb zur Innenweltdarstellung (→ Gedanken und Gefühle)
+----------------------------------------------------------------
 
-* Auktorialer Erzähler
-* Erlebte Rede:
-    Dritte Person Präteritum = Innensicht ohne kommentierende Einmischung des Erzählers
-    → Demarkationsprobleme: Verschmelzung von Erzähler- und Figurenstimme
-* Innerer Monolog:
-    Ich-Form Präsens
-* Bewusstseinseinstrom:
-    Unvollständige Syntax
+-   Auktorialer Erzähler
+-   Erlebte Rede: Dritte Person Präteritum = Innensicht ohne
+    kommentierende Einmischung des Erzählers → Demarkationsprobleme:
+    Verschmelzung von Erzähler- und Figurenstimme
+-   Innerer Monolog: Ich-Form Präsens
+-   Bewusstseinseinstrom: Unvollständige Syntax
 
-## Umgeschriebener Textauszug aus "Tauben im Gras" (erlebte Rede → innerer Monolog)
+Umgeschriebener Textauszug aus "Tauben im Gras" (erlebte Rede → innerer Monolog)
+--------------------------------------------------------------------------------
 
-Edwin kam mit schnellen Schritten in die Bar und eilte zur Theke.
-Er flüsterte mit dem Mixer. Der Mixer goss Edwin den Kognak in ein großes Rotweinglas.
-Edwin trank das Glas aus. 
-"Ach, habe ich großes Lampenfieber! Ich hoffe durch den Kognak kann ich dem entgegenwirken"
-Vor dem Hotel wartete schon der Wagen des Konsultats.
-"Wie mich meine Arroganz hasse ich hätte einfach in meiner kleinen Wohnung bleiben können... 
-Aber nein! Ich muss natürlich ein Buch schreiben, nur Anstrengung und Ärger hat mir das gebracht. 
-Wenn ich ehrlich bin hasse ich meine Zunft und die der Schauspieler! Öffentlichkeits suchendes Pack sind wir allesamt. 
-Aber auch die Menge.. Sie beschäftigen sich doch gar nicht mit der Kunst! 
-Sie klatschen nur allesamt brav ab. 
-Der größte Teil der Leute schläft ja sogar bei dem was ich sage ein. 
-Warum sind sie denn dann hier? Um sich zu präsentieren, dass ist es! 
-Unglaublich dieser Pöbel. 
-Und zu allem überfluss starrt mich schon wieder diese Treppenweib an, ich würde am liebsten wieder zu Hause sein! 
-Ach was vermisse ich meine kleine mit Büchern zugestellte Wohnung!"
+Edwin kam mit schnellen Schritten in die Bar und eilte zur Theke. Er
+flüsterte mit dem Mixer. Der Mixer goss Edwin den Kognak in ein großes
+Rotweinglas. Edwin trank das Glas aus. "Ach, habe ich großes
+Lampenfieber! Ich hoffe durch den Kognak kann ich dem entgegenwirken"
+Vor dem Hotel wartete schon der Wagen des Konsulats. "Wie mich meine
+Arroganz hasse ich hätte einfach in meiner kleinen Wohnung bleiben
+können... Aber nein! Ich muss natürlich ein Buch schreiben, nur
+Anstrengung und Ärger hat mir das gebracht. Wenn ich ehrlich bin hasse
+ich meine Zunft und die der Schauspieler! Öffentlichkeit suchendes Pack
+sind wir allesamt. Aber auch die Menge.. Sie beschäftigen sich doch gar
+nicht mit der Kunst! Sie klatschen nur allesamt brav ab. Der größte Teil
+der Leute schläft ja sogar bei dem was ich sage ein. Warum sind sie denn
+dann hier? Um sich zu präsentieren, dass ist es! Unglaublich dieser
+Pöbel. Und zu allem Überfluss starrt mich schon wieder diese Treppen Weib
+an, ich würde am liebsten wieder zu Hause sein! Ach was vermisse ich
+meine kleine mit Büchern zugestellte Wohnung!"
